--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -1,4 +1,11 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524663.md#1" target="_blank">陈思敏：美国经济仍亮眼 中共贸战押错注</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524663.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/000_1J80ZR-600x400-2-150x120.jpg" align ="left"></a>按照中共商务部稍早宣布，中美10月份将在华盛顿展开新一轮协商。中共打贸易战明显在拖的一个押注是：中国经济虽然下行，美国经济也在放缓。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 8:15 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522585.md#1" target="_blank">程晓容：香港掀风暴 中共的“敌人”知多少</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522585.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909141942181538-1-150x120.jpg" align ="left"></a>德媒的评论一针见血。中共之所以树敌众多，而且动不动就如临大敌，乃是因为，凡是维护普世价值的个人、国家、观点、举动，都被中共视为敌人、敌对言行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 5:00 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524612.md#1" target="_blank">石铭：人权迫害者的厄运正在到来</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524612.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1506040018281657-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>据明慧网二零一九年九月十日报导，法轮功将向美移民局提供在美恶人名单。文章指出：“近日，美国移民与海关执法局（ICE，Immigration and Customs Enforcement）通过在纽约、旧金山、亚特兰大、洛杉矶等十二个城市的办公室在全国范围内展开统一的“绝无藏匿之地”（No Safe Haven）行动，逮.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 2:33 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524162.md#1" target="_blank">袁斌：反送中成了中共造假新闻的照妖镜</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524162.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/7be367ac104c2fe220e955a9b31d2cda-600x400-1-150x120.jpg" align ="left"></a>日前，央视转播了一个“16岁香港女孩曝曾被暴徒性侵”视频。这个视频来自一个署名“深海鱼”的人在推特发布的两条推，先讲述14岁少女被朋友拉去参加集会，然后遭到多次性侵。后来的推中少女年龄变成16岁，最后决定报警，“希望警察可以处理这班人渣”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 11:41 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524023.md#1" target="_blank">魏京生：第二次冷战开始了吗？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/d9d5e783301fb296c3dc811061278082-600x400-1-150x120.jpg" align ="left"></a>美国的智库和媒体谈论第二次冷战，已经有些日子了。最近突然上升成为了主调，数量大增。一些人认为不可避免，一些人认为看上去不像。多数人都是以上一次和苏联的冷战作模本在议论，我认为有些刻舟求剑，不得要领。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 10:03 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523724.md#1" target="_blank">周晓辉：沙特石油设施被炸 美国为何要警惕中共？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523724.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1KA0YT-600x400-1-150x120.jpg" align ="left"></a>而这或许释放的信号就是美国依旧不会卷入新的中东战争，但绝不会坐视伊朗继续挑衅，美国坚定的盟友以色列将在中东发挥更为重要的作用，亦如之前对伊朗在海外的军事基地实施打击一样。不过，这对于美国并不足够，对于背后真正的操盘手中共，美国该放出什么大招予以打击呢?......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 6:17 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523702.md#1" target="_blank">张菁：科技和科技公司给人们带来的危机</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/0881366d37bf5134fe2f17656d666023-600x400-150x120.jpg" align ="left"></a>目前高科技对人们隐私的威胁步步紧逼，在一个道德沦丧，没有人性底线的社会中，科技公司如果只考虑中共的需求，在中共妄想管天、管地、甚至管控人们思想的变态需求下，把技术用于做恶，结果必然是被科技所害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 4:02 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522922.md#1" target="_blank">程凯：《李锐日记》保卫战</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522922.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1907040114431758-150x120.jpg" align ="left"></a>中共党内开明派元老李锐二零一九年二月十六日逝世，享年一百零一岁。李锐逝世不久，便发生一场《李锐日记》保卫战，这场保卫战打进了美中两国的法院。交战双方：中国那边，出面争夺《李锐日记》的是李锐的遗孀张玉珍，背后是中共中央组织部，并且由中共中央最高层授意；美国这边，保卫《李锐日记》的是斯坦福大学胡佛研究所，和李锐的女儿李南央.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 1:46 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522561.md#1" target="_blank">袁斌：网友对话——对马克思的迷信早该打破了</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522561.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/BRITAIN-HISTORY-HERITAGE-POLITICS-CRIME-MARX-GettyImages-1094140130-150x120.jpg" align ="left"></a>中秋小长假，几位网友聊着聊着聊到了马克思的理论，以下是他们的对话：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 6:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522958.md#1" target="_blank">大成漫画：中共流氓毁香港</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/0409379ae9d12f820655733b39e7d82e-150x120.jpg" align ="left"></a>香港啊香港，
@@ -25,13 +32,12 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507433.md#1" target="_blank">王赫：习近平大讲“斗争”的背后</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1139027305-150x120.jpg" align ="left"></a>9月3日，习近平在中共中央党校（国家行政学院）中青年干部培训班的开班仪式上大讲“斗争”。官媒报道显示，习近平至少五十八次提到“斗争”一词，强调领导干部要敢于“斗争”、善于“斗争”，并且面临的各种“斗争”是长期的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 6:54 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520983.md#1" target="_blank">胡少江：那些支持中国政府、反对市民示威的香港“爱国者”</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520983.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909130936422478-150x120.jpg" align ="left"></a>两位香港女士周二（10日）前往联合国人权理事会发表演说，声言是代表香港市民发声，谴责数百万的香港示威者是“暴力人士”，支持香港警察对示威者的武力镇压，其中的一位还代表共产党向世界宣传了中国的脱贫成就。有趣的是，这两位代表中国“无产阶级政党”说话的人都是香港富家千金：一位是美心集团创办人的千金；另一位则是赫赫有名的澳门赌.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 6:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520959.md#1" target="_blank">唐恩：中秋月圆谢师恩</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520959.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/2019-9-11-1909060725375252-150x120.jpg" align ="left"></a>八月十五金秋时节，明慧网收到来自四十个国家和地区敬致法轮功创始人李洪志先生的问候，全世界法轮功学员更加感恩师尊的教导和慈悲救度。这些制作精美的贺卡与发自肺腑的祝福语，来自包括军队、教育系统、各行各业的新老学员和明白真相的世人，诚心敬祝李大师中秋节快乐。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 3:24 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520691.md#1" target="_blank">觅真：大法神奇显 感恩表心愿</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520691.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/2019-9-11-1908301145406221-150x120.jpg" align ="left"></a>据明慧网近日报导，在二零一九年中秋节到来之际，受益于法轮大法的中国民众，感恩李洪志先生的慈悲救度，遥寄精美的贺卡和发自肺腑的感言，敬祝李大师中秋节好！从这些贺卡和感言中，我们看到了众意所归、民心所向。在这里仅摘录几句片段：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 2:49 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520565.md#1" target="_blank">王友群：林郑录音再公开透露什么重大信息</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520565.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/20190823-HUAMING-HONGKONG-01-600x400-150x120.jpg" align ="left"></a>9月12日晚，路透社发表香港特首林郑月娥上月底一次闭门谈话的完整文字记录，以及未公开的录音。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 1:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520471.md#1" target="_blank">杜耀明: 警暴逍遥法外 对话何来基础</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520471.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1908310923132188-600x400-1-150x120.jpg" align ="left"></a>香港特首林郑月娥就反“送中”风波提出的四项行动绝非让步，因为只要她继续对警暴问题坐视不理，任意纵容警方以非法暴力执法，她的一切所谓让步，不外是政治烟幕，意图掩饰当局通过警队镇压示威者，并制造白色恐怖扼杀公民权利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 11:52 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520481.md#1" target="_blank">王赫：四中全会主导权争夺战</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520481.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/10/1410202227491528-150x120.jpg" align ="left"></a>最近中共政局颇为诡异，戏剧性“情节”一再出现，笔者以为其意图在于四中全会主导权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 11:38 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520380.md#1" target="_blank">袁斌：运交华盖的董卿与董倩</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/ss-2-2-150x120.jpg" align ="left"></a>提起“央视一姐”董卿，国人几乎无人不知。她的职业生涯，可谓一路顺风，风光无限，令人羡慕不已。不过，今年的董卿却交上了华盖运。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 11:02 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/12/n11517537.md#1" target="_blank">周晓辉：北京近期对美再变脸的三大原因</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/12/n11517537.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1211290826301497-600x400-150x120.jpg" align ="left"></a>虽然博尔顿在对华问题上持强硬态度，如其批评中共盗窃知识产权、违背对世贸组织的承诺等，但其将美国引入一场新的海外战争却与中共希望美国将注意力转向朝鲜、中东等不谋而合。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月13日 8:30 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11519143.md#1" target="_blank">项云：香港要谨防中共“化整为零”的毒辣手段</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11519143.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1908130407071501-150x120.jpg" align ="left"></a>中共怕自己速死不敢上演香港版“六四”，但毫无人性的中共绝不会善罢甘休也在意料中，中共惯用武装人员“化整为零”各个击破的毒辣残忍手段迫害人民。从香港民众抗议那天起，全世界就都见证了，现在更变本加厉。中共会暗中实施迫害勾当，再现当年希特勒法西斯恐怖行为和气氛，这种红色恐怖行径中国人民一点都不陌生，从中共篡政以来数次政治运动.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月13日 8:01 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524312.md#1" target="_blank">金浴凤：红朝恨赋</a><br></h3>凭空坠落，遍地蒙冤，高山溅血，江海萦骨。
+首恨神佛，砸庙毁像。神龛无光，贝叶投火，和尚参军，尼姑改嫁。隐赤共而混佛协，改经义而颂邪党，妆门面而变市场。
+次恨传统，焚典销迹。先贤尸暴，孔门杏伐，侮辱斯文，揪斗大师，或灰心而沉江湖，或忍耻而度残生，或弃国而走他乡。
+再恨人民，血雨腥风。频掀运动，摧骨诛心，抢夺财货，背.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 12:19 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524103.md#1" target="_blank">关于改变两位大学校长死刑判决的紧急呼吁</a><br></h3>中国维吾尔自治区高等法院并自治区党委、政府：我们惊悉原新疆大学校长塔西甫拉提·特依拜（Tashpolat Tiyip）和新疆医科大学原校长哈木拉提·乌普尔（Halmurat Ghopur）被判死刑（大赦国际消息说，两人被判死缓后目前面临实际执行。也有其他消息源说是被直接判处死刑），对此我们深感震惊和不解。并紧急呼吁你们.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 10:42 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11523985.md#1" target="_blank">谭笑飞：闲谈中共的“问责”与“背锅”</a><br></h3>9月1日，中共修订了《问责条例》。从社团、企业到国家，章程中都有奖惩条款，目的是维护纪律和秩序，引导和激励成员去实现这个组织的目标。中共也不例外，但是中共的奖惩制度，不是中共《党章》或者《问责条例》之类的明文规定，而是特有的潜规则。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 9:01 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522917.md#1" target="_blank">云鹤天： 清平乐?从“抗日战争”到“解放战争”</a><br></h3>今非昔比，
 翅膀能飞起。
 抗战八年丰羽翼，
@@ -59,25 +65,5 @@
 与孔夫子斗
 中共失去了传统来载重
 与和尚道士斗......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 3:07 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520625.md#1" target="_blank">诸葛九郎：共产党的现眼和林郑的“愁”恨</a><br></h3>香港的中秋，月亮不再圆华。多少家庭，为争人权站立街头，多少港人，为未来团圆奔波在世界各国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 2:14 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520609.md#1" target="_blank">陆雯：赞港人</a><br></h3>中共窃权七十年
-一路杀戮一路骗
-谎言暴力一并用
-兽性大显
-政治运动连番
-中华精英遭难
-冤魂八千万
-制造恐惧株连
-百姓不敢言......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 1:47 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11519122.md#1" target="_blank">吐为快：念奴娇?共匪网上柏林墙</a><br></h3>魔国局域
-控言论
-隔绝世外消息
-神州沦陷七十年
-悬挂血旗一面
-专制独霸
-妖魔共舞
-上下一色鸦
-亿人一腔
-不容半点异话......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月13日 7:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_5.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
